# GRE_buck_index

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  run.sh  run_mrsw.sh  run_write_intensive.sh
cmake/: FindMKL.cmake  FindTBB.cmake
datasets/: download.sh
script/: Figure1_plot_err_vs_group_size.py  Figure4_hint_search_distance.py  Figure4_hint_throughput.csv  Figure6_overall.csv  Figure6_overall_throughput.py  Figure7_s_dbuck_size.csv  Figure7_s_dbuck_size.py  Figure8_fill_ratio.csv  Figure8_fill_ratio.py  Figure9_mrsw.csv  Figure9_mrsw.py  README.md  plot_err_vs_group_size.py  run_RAW.sh  run_RAW_120M.sh  run_RAW_smo1e9_window2.sh  run_bulk_load.sh  run_bulk_loading.sh  run_dbuck_size.sh  run_dbuck_size_insert_only_books.sh  run_fill_ratio.sh  run_hint_throughput.sh  run_insert_step_function.sh  run_motivation_concurrency.sh  run_mrsw.sh  run_overall.sh  run_overall_fail_distance.sh  run_overall_time_breakdown.sh  run_read_after_write.sh  run_s_dbuck_size.sh  run_scan.sh  run_scan_time_breakdown.sh
src/: tscns.h
src/benchmark/: bench_mrsw.cpp  benchmark.h  microbench_read_after_write.cpp  utils.h
src/competitor/: competitor.h  indexInterface.h
src/competitor/buckindex/: buckindex.h  buckindex_concurrent.h
src/competitor/dili/: dili.h
src/competitor/xindex/src/: CMakeLists.txt  README.md
